--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,17 @@ server.port = 8091
 
 #server.port = 8091
 
+# Auth0
+auth0.audience=https://menu/api
+auth0.clientId=
+auth0.clientSecret=
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-7djw7qar.us.auth0.com
+
 # Datasource
 spring.datasource.url=jdbc:mysql://localhost:3307/restaurant
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=abc123
+spring.datasource.password=password
 
 # JPA
 spring.jpa.show-sql=true
